# SmoothParticleHydrodynamics

./: .gitignore  Cargo.toml  README.md  justfile
equation/: README.md  bouncing_particle.ipynb  cubic_b_spline.ipynb  cubic_spline.ipynb  poly6_kernel.ipynb  smoothing_kernel.ipynb  spiky_kernel.ipynb  util.py  viscosity.ipynb
equation/samples/: cubic_spline.json  poly6.json  spiky.json  viscosity.json
src/: 2d_sim.rs  3d_sim.rs  benchmark.rs  bouncing_particle.rs  pressure_2d.rs  render.rs  simulator.rs  util.rs  zero_gravity.rs
src/kernel/: common.rs  cubic_spline.rs  definition.rs  mod.rs  poly6.rs  spiky.rs  tests_helper.rs  viscosity.rs
src/model/: density.rs  mod.rs  pressure.rs  surface_tension.rs  viscosity.rs
src/model/pressure/: mod.rs  simple.rs  tait.rs
src/model/surface_tension/: becker_teschner_07.rs  mod.rs  surface_tension.rs
src/model/viscosity/: artificial.rs  mod.rs  simple.rs
src/util/: camera_control.rs  neighborhood_search.rs  spike_kernel.rs
src/util_2d/: boundary.rs  camera_control.rs
src/util_3d/: init_setup.rs  mod.rs  particle.rs  space.rs  spatial_hash_grid.rs
