[package]
name = "sph_simulation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2d_sim"
path = "src/2d_sim.rs"

[[bin]]
name = "3d_sim"
path = "src/3d_sim.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4"
uom = "0.35.0"
rayon = "*"
itertools = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
